--- a/public/index.html
+++ b/public/index.html
@@ -234,6 +234,6 @@
     </main>
   </div>
 
-  <script src="/script.js" type="module"></script>
+  <script type="module" src="/public/script.js"></script>
 </body>
 </html>
