fix: caminhos de styles.css e script.js

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
   <script crossorigin src="https://unpkg.com/recharts/umd/Recharts.js"></script>
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="/public/styles.css">
 </head>
 <body class="min-h-screen bg-slate-950 text-slate-50">
   <div class="absolute inset-0 bg-[radial-gradient(circle_at_20%_20%,#4f46e5_0,#111827_25%),radial-gradient(circle_at_80%_0%,#0ea5e9_0,#111827_22%),radial-gradient(circle_at_50%_80%,#22d3ee_0,#0f172a_28%)] opacity-40 pointer-events-none"></div>
@@ -234,6 +234,6 @@
     </main>
   </div>
 
-  <script type="module" src="/public/script.js"></script>
+  <script src="/public/script.js" type="module"></script"></script>
 </body>
 </html>
