--- a/public/index.html
+++ b/public/index.html
@@ -237,3 +237,17 @@
   <script src="/public/script.js" type="module"></script"></script>
 </body>
 </html>
+
+<section class="card">
+  <h2>Análise de preços com IA</h2>
+  <p>
+    Clique no botão abaixo para gerar uma análise automática dos preços da Space
+    Tênis em comparação com os concorrentes.
+  </p>
+
+  <button id="btn-analise-ia" onclick="gerarAnaliseIA()">
+    Analisar preços com IA
+  </button>
+
+  <pre id="analise-ia-resultado" style="white-space: pre-wrap; margin-top: 16px;"></pre>
+</section>
